Story #9797 - Upgrade mongodb java client driver